lab04 full demo
